<resources>
    <string name="app_name">mvvm</string>
    <string name="search">Search</string>
    <string name="sort">sort</string>
    <string name="sort_by_name">sort by name</string>
    <string name="sort_bydate">sort bydate</string>
    <string name="sort_by_date">sort by date</string>
    <string name="show_favorite">show favorite</string>
    <string name="save">save</string>
    <string name="title">Title...</string>
    <string name="description">Description...</string>
</resources>