<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            android:title="@string/search"
            />
    <item
            android:id="@+id/action_sort"
            android:icon="@drawable/ic_sort"
            android:title="@string/sort"
            app:showAsAction="always">
        <menu>
            <item
                    android:id="@+id/action_sort_name"
                    android:title="@string/sort_by_name" />
            <item
                    android:id="@+id/action_sort_date"
                    android:title="@string/sort_by_date" />

        </menu>
    </item>

    <item
            android:id="@+id/action_show_favorite"
            android:checkable="true"
            android:title="@string/show_favorite"
            app:showAsAction="never"/>
</menu>